# GaussianTools

./: .gitignore  CMakeLists.txt  Gaussian.xlsx  README.md
.github/workflows/: build.yml
config/: gauss-config.csv
docs/: CMakeLists.txt  Doxyfile.in
inc/: CMakeLists.txt  Gaussian.hpp
src/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Gaussian.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp
